# dbt-py

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
dbt_py/: config.py  exceptions.py  main.py
tests/integration/: test__integration.py
tests/integration/jaffle-shop/: pyproject.toml
